unpackaged/main/default/objects/User/fields/LevelJumpUser__c.field-meta.xml
<CustomField>
    <fullName>LevelJumpUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This denotes who is set up as a level jump user and who is not</description>
    <inlineHelpText>This denotes who is set up as a level jump user and who is not</inlineHelpText>
    <label>LevelJump User</label>
    <type>Checkbox</type>
</CustomField>