unpackaged/main/default/objects/User/fields/Mapped_SDR__c.field-meta.xml
<CustomField>
    <fullName>Mapped_SDR__c</fullName>
    <description>This field connects the mapped SDR to the AE on the account</description>
    <label>Mapped SDR</label>
    <relationshipName>AE_SDR</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>