unpackaged/main/default/objects/User/fields/Org_Type__c.field-meta.xml
<CustomField>
    <fullName>Org_Type__c</fullName>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>CX</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>