unpackaged/main/default/objects/User/fields/Prior_Role__c.field-meta.xml
<CustomField>
    <fullName>Prior_Role__c</fullName>
    <description>This defines what the role of the user was prior to their current role. This can help with reporting when a user goes from one role to another (i.e. SDR to AE)</description>
    <inlineHelpText>This defines what the role of the user was prior to their current role. This can help with reporting when a user goes from one role to another (i.e. SDR to AE)</inlineHelpText>
    <label>Prior Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>