unpackaged/main/default/objects/User/fields/Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Profile_ID__c</fullName>
    <description>Current Profile ID for OKTA provisioning</description>
    <inlineHelpText>Current Profile ID for OKTA provisioning</inlineHelpText>
    <label>Profile ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>