unpackaged/main/default/objects/User/fields/Ramped__c.field-meta.xml
<CustomField>
    <fullName>Ramped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ramped?</label>
    <type>Checkbox</type>
</CustomField>