unpackaged/main/default/objects/User/fields/Role_ID__c.field-meta.xml
<CustomField>
    <fullName>Role_ID__c</fullName>
    <description>Current Role ID for OKTA provisioning</description>
    <inlineHelpText>Current Role ID for OKTA provisioning</inlineHelpText>
    <label>Role ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>