unpackaged/main/default/objects/User/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <formula>UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role Name</label>
    <type>Text</type>
</CustomField>