unpackaged/main/default/objects/User/fields/SDR_Quota_Role__c.field-meta.xml
<CustomField>
    <fullName>SDR_Quota_Role__c</fullName>
    <label>SDR Quota Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Hire</fullName>
                <default>true</default>
                <label>New Hire</label>
            </value>
            <value>
                <fullName>AMER - Inbound - Principal - Full</fullName>
            </value>
            <value>
                <fullName>AMER - Inbound - Senior - Full</fullName>
            </value>
            <value>
                <fullName>AMER - Inbound - Standard - Full</fullName>
            </value>
            <value>
                <fullName>AMER - Warmbound - Principal - Full</fullName>
            </value>
            <value>
                <fullName>AMER - Warmbound - Senior - Full</fullName>
            </value>
            <value>
                <fullName>AMER - Warmbound - Standard - Full</fullName>
            </value>
            <value>
                <fullName>APJ - Inbound - Principal - Full</fullName>
            </value>
            <value>
                <fullName>APJ - Inbound - Senior - Full</fullName>
            </value>
            <value>
                <fullName>APJ - Inbound - Standard - Full</fullName>
            </value>
            <value>
                <fullName>APJ - Warmbound - Principal - Full</fullName>
            </value>
            <value>
                <fullName>APJ - Warmbound - Senior - Full</fullName>
            </value>
            <value>
                <fullName>APJ - Warmbound - Standard - Full</fullName>
            </value>
            <value>
                <fullName>EMEA - Inbound - Principal - Full</fullName>
            </value>
            <value>
                <fullName>EMEA - Inbound - Senior - Full</fullName>
            </value>
            <value>
                <fullName>EMEA - Inbound - Standard - Full</fullName>
            </value>
            <value>
                <fullName>EMEA - Warmbound - Principal - Full</fullName>
            </value>
            <value>
                <fullName>EMEA - Warmbound - Senior - Full</fullName>
            </value>
            <value>
                <fullName>EMEA - Warmbound - Standard - Full</fullName>
            </value>
            <value>
                <fullName>AMER - Inbound - Principal - Ramp 1</fullName>
            </value>
            <value>
                <fullName>AMER - Inbound - Senior - Ramp 1</fullName>
            </value>
            <value>
                <fullName>AMER - Inbound - Standard - Ramp 1</fullName>
            </value>
            <value>
                <fullName>AMER - Warmbound - Principal - Ramp 1</fullName>
            </value>
            <value>
                <fullName>AMER - Warmbound - Senior - Ramp 1</fullName>
            </value>
            <value>
                <fullName>AMER - Warmbound - Standard - Ramp 1</fullName>
            </value>
            <value>
                <fullName>APJ - Inbound - Principal - Ramp 1</fullName>
            </value>
            <value>
                <fullName>APJ - Inbound - Senior - Ramp 1</fullName>
            </value>
            <value>
                <fullName>APJ - Inbound - Standard - Ramp 1</fullName>
            </value>
            <value>
                <fullName>APJ - Warmbound - Principal - Ramp 1</fullName>
            </value>
            <value>
                <fullName>APJ - Warmbound - Senior - Ramp 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>