unpackaged/main/default/objects/User/fields/User_ID_15_digit__c.field-meta.xml
<CustomField>
    <fullName>User_ID_15_digit__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User ID (15 digit)</label>
    <type>Text</type>
</CustomField>