unpackaged/main/default/objects/User/fields/User_ID_18_digit__c.field-meta.xml
<CustomField>
    <fullName>User_ID_18_digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User ID (18 digit)</label>
    <type>Text</type>
</CustomField>