unpackaged/main/default/objects/User/listViews/Recently_Created_Users.listView-meta.xml
<ListView>
    <fullName>Recently_Created_Users</fullName>
    <columns>Hire_Date__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>SFCONTENT_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>IS_FROZEN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>Partner Community</value>
    </filters>
    <label>Recently Created Users</label>
    <sharedTo />
</ListView>